{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 17,
  "lineage": "0abebf73-2870-3525-c41d-e574460c897e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b0de04c26b47ee0",
            "arn": "arn:aws:ec2:us-east-1:342597974367:elastic-ip/eipalloc-09b0de04c26b47ee0",
            "domain": "vpc",
            "id": "eipalloc-09b0de04c26b47ee0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-94-248-49.compute-1.amazonaws.com",
            "public_ip": "3.94.248.49",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "nat-eip-1-synth101000851",
              "Project": "trading-platform"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "nat-eip-1-synth101000851",
              "Project": "trading-platform"
            }
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00c37c0df44410277",
            "arn": "arn:aws:ec2:us-east-1:342597974367:elastic-ip/eipalloc-00c37c0df44410277",
            "domain": "vpc",
            "id": "eipalloc-00c37c0df44410277",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-95-46-231.compute-1.amazonaws.com",
            "public_ip": "98.95.46.231",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "nat-eip-2-synth101000851",
              "Project": "trading-platform"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "nat-eip-2-synth101000851",
              "Project": "trading-platform"
            }
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06925115542122232",
            "arn": "arn:aws:ec2:us-east-1:342597974367:elastic-ip/eipalloc-06925115542122232",
            "domain": "vpc",
            "id": "eipalloc-06925115542122232",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-5-108-57.compute-1.amazonaws.com",
            "public_ip": "52.5.108.57",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "nat-eip-3-synth101000851",
              "Project": "trading-platform"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "nat-eip-3-synth101000851",
              "Project": "trading-platform"
            }
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:internet-gateway/igw-069d55ce552bb1014",
            "id": "igw-069d55ce552bb1014",
            "owner_id": "342597974367",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "igw-synth101000851",
              "Project": "trading-platform"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "igw-synth101000851",
              "Project": "trading-platform"
            },
            "vpc_id": "vpc-09579035f95663921"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:route-table/rtb-05987dee04d002ee8",
            "id": "rtb-05987dee04d002ee8",
            "owner_id": "342597974367",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-069d55ce552bb1014",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "public-rt-synth101000851",
              "Project": "trading-platform"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "public-rt-synth101000851",
              "Project": "trading-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-09579035f95663921"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09428f5cd679bbbaf",
            "region": "us-east-1",
            "route_table_id": "rtb-05987dee04d002ee8",
            "subnet_id": "subnet-0d5ed01bd718d464a"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d79063e1e7580705",
            "region": "us-east-1",
            "route_table_id": "rtb-05987dee04d002ee8",
            "subnet_id": "subnet-0658873fc174e5668"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c41d7e1244a68da",
            "region": "us-east-1",
            "route_table_id": "rtb-05987dee04d002ee8",
            "subnet_id": "subnet-01f8f69411e5da216"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:security-group/sg-03a2cec597f8769d7",
            "description": "Security group for database servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a2cec597f8769d7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from web security group",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02022176972a46437"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "database-sg-synth101000851-20251106140802378000000003",
            "name_prefix": "database-sg-synth101000851-",
            "owner_id": "342597974367",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "database-sg-synth101000851",
              "Project": "trading-platform"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "database-sg-synth101000851",
              "Project": "trading-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-09579035f95663921"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:security-group/sg-02022176972a46437",
            "description": "Security group for web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02022176972a46437",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg-synth101000851-20251106140754612800000001",
            "name_prefix": "web-sg-synth101000851-",
            "owner_id": "342597974367",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "web-sg-synth101000851",
              "Project": "trading-platform"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "web-sg-synth101000851",
              "Project": "trading-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-09579035f95663921"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:subnet/subnet-0d4012212eb68a00d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4012212eb68a00d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "private-subnet-1-synth101000851",
              "Project": "trading-platform",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "private-subnet-1-synth101000851",
              "Project": "trading-platform",
              "Type": "private"
            },
            "vpc_id": "vpc-09579035f95663921"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:subnet/subnet-0e3675306f0d09eb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3675306f0d09eb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "private-subnet-2-synth101000851",
              "Project": "trading-platform",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "private-subnet-2-synth101000851",
              "Project": "trading-platform",
              "Type": "private"
            },
            "vpc_id": "vpc-09579035f95663921"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:subnet/subnet-09bfb7110998b9e46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bfb7110998b9e46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "private-subnet-3-synth101000851",
              "Project": "trading-platform",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "private-subnet-3-synth101000851",
              "Project": "trading-platform",
              "Type": "private"
            },
            "vpc_id": "vpc-09579035f95663921"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:subnet/subnet-0d5ed01bd718d464a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5ed01bd718d464a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "public-subnet-1-synth101000851",
              "Project": "trading-platform",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "public-subnet-1-synth101000851",
              "Project": "trading-platform",
              "Type": "public"
            },
            "vpc_id": "vpc-09579035f95663921"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:subnet/subnet-0658873fc174e5668",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0658873fc174e5668",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "public-subnet-2-synth101000851",
              "Project": "trading-platform",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "public-subnet-2-synth101000851",
              "Project": "trading-platform",
              "Type": "public"
            },
            "vpc_id": "vpc-09579035f95663921"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:subnet/subnet-01f8f69411e5da216",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f8f69411e5da216",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "public-subnet-3-synth101000851",
              "Project": "trading-platform",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "public-subnet-3-synth101000851",
              "Project": "trading-platform",
              "Type": "public"
            },
            "vpc_id": "vpc-09579035f95663921"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:vpc/vpc-09579035f95663921",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ed04997592300940",
            "default_route_table_id": "rtb-054c833762522e178",
            "default_security_group_id": "sg-0ceef2d87ff1f3ec3",
            "dhcp_options_id": "dopt-096ea572b45cebc14",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09579035f95663921",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-054c833762522e178",
            "owner_id": "342597974367",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "trading-platform-vpc-synth101000851",
              "Project": "trading-platform"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "trading-platform-vpc-synth101000851",
              "Project": "trading-platform"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}